src/main/java/semantic/symbolTable/test/failing/redefinedAttribute.ru
/? RedefinedVariableException
struct A {
    pri Int a;
    Int a;
}